# fast-app

./: .gitignore  Dockerfile  Makefile  README.md  cfg.py  ctx.py  pyproject.toml
conf/: test.toml
docker/: build.sh  docker-compose.yaml
docs/: architecture.excalidraw
misc/load_testing/: locustfile.py
misc/notebook/: Untitled.ipynb  Untitled2.ipynb  Untitled4.ipynb  imdb-data.ipynb  imdb-ingest.ipynb  letterboxd-ingest.ipynb
requirements/: prod.in
src/myapp/core/repo/: movie.py
src/myapp/lib/: cfg.py  const.py  ctx.py  exc.py  redis_.py
src/myapp/tests/: conftest.py
src/myapp/tests/core/repo/: test_movie.py
src/myapp/tests/web/: conftest.py  test_movie.py  test_root.py
src/myapp/web/: app.py
src/myapp/web/routers/: movie.py
